turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: type mismatch;
 found   : Int
 required: Char
		case 'R' => if(p==colors.length - 1){p=0}else{y+=1}
                                                               ^LangtonsAnt:17: error: type mismatch;
 found   : Int
 required: Char
		case 'L' => if(p==colors.length - 1){p=0}else{y+=1}
                                                               ^